Modified to add it to todo app

--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -5,19 +5,23 @@
               android:layout_height="match_parent">
 
     <CheckBox
+            android:scaleX="2.8"
+            android:scaleY="2.8"
+            android:checked="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Done"/>
     <TextView
-            android:text="TextView"
-            android:ems="12"
-            android:textSize="20dp"
+            android:layout_marginLeft="18dp"
+            android:text=""
+            android:ems="10"
+            android:textSize="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/task_output"/>
-    <Button
-            android:text="Delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Delete_task" />
+    <ImageView
+            android:id="@+id/delete_item"
+            android:src="@drawable/ic_delete"
+            android:layout_width="50dp"
+            android:layout_height="40dp"/>
 </LinearLayout>
