--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
-               android:hint="ENter Task Here"
-               android:ems="10"
+               android:hint="Enter Task Here"
+               android:ems="9"
                android:id="@+id/task_input"/>
        <Button
                android:text="Add"
