--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -2,26 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+              android:layout_height="wrap_content">
     <CheckBox
-            android:scaleX="2.8"
-            android:scaleY="2.8"
             android:checked="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Done"/>
     <TextView
-            android:layout_marginLeft="18dp"
+            android:layout_marginLeft="15dp"
             android:text=""
-            android:ems="10"
-            android:textSize="25dp"
+            android:ems="18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/task_output"/>
     <ImageView
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="10dp"
             android:id="@+id/delete_item"
             android:src="@drawable/ic_delete"
-            android:layout_width="50dp"
-            android:layout_height="40dp"/>
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
 </LinearLayout>
